overflow-fix and note add finish

--- a/assets/style/apps/mail/mail-list.css
+++ b/assets/style/apps/mail/mail-list.css
@@ -9,6 +9,10 @@
     width: 100%;
 }
 
+.mail-list-container{
+  overflow: scroll;
+}
+
 .list-item {
     justify-content: space-between;
     cursor: pointer;
